--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,14 @@
 body {
     background: #999;
 }
+.container {
+    margin: 0 200px;
+}
+
+@media (max-width: 767px) {
+        .container{
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+    }
+}
