--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,7 @@
 }
 
 body {
-    /* background: #999; */
-}
-.container {
-    margin: 0 200px;
+    background: #999;
 }
 
 @media (max-width: 767px) {
